--- a/package.json
+++ b/package.json
@@ -25,13 +25,18 @@
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.18.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-tailwindcss": "^3.5.2",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.2",
-    "prettier": "2.7.1",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.11",
+    "tailwindcss": "^3.1.3",
     "typescript": "^4.7.4"
   },
   "lint-staged": {
