feat: ディレクトリの準備

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,9 +28,7 @@
     "plugin:tailwindcss/recommended",
     "prettier"
   ],
-  "ignorePatterns": [
-    "*.config.js"
-  ],
+  "ignorePatterns": ["*.config.js"],
   "rules": {
     "@typescript-eslint/explicit-function-return-type": 0,
     "@typescript-eslint/no-explicit-any": 0,
