feat: Headerの原型を作成

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test-all": "npx yarn-run-all lint check-types format lint:fix"
   },
   "dependencies": {
+    "daisyui": "^2.15.4",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
