--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test-all": "npx yarn-run-all lint check-types format lint:fix"
   },
   "dependencies": {
+    "@svgr/webpack": "^6.2.1",
     "daisyui": "^2.15.4",
     "next": "12.1.6",
     "react": "18.2.0",
