--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vivace-lp",
   "version": "0.1.0",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -15,10 +16,12 @@
   },
   "dependencies": {
     "@svgr/webpack": "^6.2.1",
+    "axios": "^0.27.2",
     "daisyui": "^2.15.4",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^1.3.0",
     "yarn-run-all": "^3.1.1"
   },
   "devDependencies": {
