fix: _app.tsxとindex.tsxの編集

--- a/package.json
+++ b/package.json
@@ -50,5 +50,10 @@
       "yarn format",
       "yarn lint:fix"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
   }
 }
